optimize fonts with subset credit: https://github.com/Munter/subfont before: 300kb of fonts after: 110kb (144kb without compression) this also prevents layout shift when the webpage is first rendered with system fonts until the fonts are properly fetched. now the rendering is blocked until the css file with fonts is loaded (which also embeds the font data itself)

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,24 +1,6 @@
-@font-face {
-  font-family: "DM Sans";
-  font-optical-sizing: auto;
-  font-display: swap;
-  font-style: normal;
-  font-weight: 700;
-  src: url(/fonts/DMSans-Variable.woff2) format(woff2);
-}
-
-@font-face {
-  font-family: "Roboto";
-  font-optical-sizing: auto;
-  font-display: swap;
-  font-stretch: 100%;
-  font-weight: 100 900;
-  src: url(/fonts/Roboto-Variable.woff2) format(woff2);
-}
-
 :root {
-  --family-text: "Roboto";
-  --family-display: "DM Sans";
+  --family-text: "Roboto__subset";
+  --family-display: "DM Sans__subset";
 
   font-family: var(--family-text);
 }
